fix: switch from opencl3 back to ocl
There is a performance regression introduced by switching from `ocl`
to `opencl3`. Until there is a proper fix, revert to using `ocl`
again.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ members = [
   "sha2raw",
   "filecoin-hashers",
 ]
+
+[patch.crates-io]
+rust-gpu-tools = { git = "https://github.com/filecoin-project/rust-gpu-tools", branch = "back-to-ocl2" }
