--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ members = [
 [patch.crates-io]
 bellperson = { git = "https://github.com/filecoin-project/bellperson", branch = "back-to-ocl" }
 neptune = { git = "https://github.com/filecoin-project/neptune", branch = "back-to-ocl" }
+rust-gpu-tools = { git = "https://github.com/filecoin-project/rust-gpu-tools", branch = "back-to-ocl" }
