WIP: check if things still work with patched ec-gpu-gen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ members = [
   "sha2raw",
   "filecoin-hashers",
 ]
+
+[patch.crates-io]
+ec-gpu-gen = { git = "https://github.com/filecoin-project/ec-gpu", branch = "amd-initialize-fix" }
