--- a/storage-proofs-update/Cargo.toml
+++ b/storage-proofs-update/Cargo.toml
@@ -49,6 +49,7 @@ memmap = "0.7"
 # halo2_proofs = { git = "https://github.com/drpetervannostrand/halo2", branch = "sha256-chip" }
 halo2_proofs = { git = "https://github.com/drpetervannostrand/halo2" }
 typemap = "0.3.3"
+fil-halo2-gadgets = { path = "../fil-halo2-gadgets" }
 
 [target."cfg(target_arch = \"aarch64\")".dependencies]
 sha2 = { version = "0.9.3", features = ["compress", "asm"] }
