--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,15 @@
-qwerty
+[workspace]
+
+ members = [
+   "filecoin-proofs",
+   "storage-proofs-core",
+   "storage-proofs-porep",
+   "storage-proofs-post",
+   "fil-proofs-tooling",
+   "fil-proofs-param",
+   "fr32",
+   "sha2raw",
+   "filecoin-hashers",
+   "storage-proofs-update",
+ ]
+ 
