WIP: no need to actually run the tests
It's only about the cache.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,16 +276,16 @@ jobs:
     resource_class: large
     environment: *setup-env
     steps:
-      - checkout
-      - run:
-          name: Install hwloc with Homebrew
-          command: HOMEBREW_NO_AUTO_UPDATE=1 brew install hwloc
-      - run:
-          name: Install Rust
-          command: |
-            curl https://sh.rustup.rs -sSf | sh -s -- -y
-      - run: cargo update
-      - run: cargo fetch
+      #- checkout
+      #- run:
+      #    name: Install hwloc with Homebrew
+      #    command: HOMEBREW_NO_AUTO_UPDATE=1 brew install hwloc
+      #- run:
+      #    name: Install Rust
+      #    command: |
+      #      curl https://sh.rustup.rs -sSf | sh -s -- -y
+      #- run: cargo update
+      #- run: cargo fetch
       # On CircleCI you cannot create a cache on Linux and restore it on macOS.
       # Hence we need a separate cache for macOS that we create and restore. It
       # is not a separate job (like `ensure_groth_parameters_and_keys_linux`,
@@ -293,14 +293,14 @@ jobs:
       - restore_parameter_cache
       - ensure_filecoin_parameters
       - save_parameter_cache
-      - run:
-          name: Test Darwin
-          command: |
-            sudo ulimit -n 20000
-            sudo ulimit -u 20000
-            ulimit -n 20000
-            cargo test --release --verbose --workspace -- --nocapture
-          no_output_timeout: 2h
+      #- run:
+      #    name: Test Darwin
+      #    command: |
+      #      sudo ulimit -n 20000
+      #      sudo ulimit -u 20000
+      #      ulimit -n 20000
+      #      cargo test --release --verbose --workspace -- --nocapture
+      #    no_output_timeout: 2h
 
 commands:
   ensure_filecoin_parameters:
