--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,7 +286,10 @@ jobs:
             curl https://sh.rustup.rs -sSf | sh -s -- -y
       - run: cargo update
       - run: cargo fetch
-      - run: nettop -m tcp -t wired -s 1 -d -l 0 -J bytes_in -p circleci-agent > nettop.log &
+      - run:
+          name: Log network traffic
+          background: true
+          command: nettop -m tcp -t wired -s 1 -d -l 0 -J bytes_in -p circleci-agent > nettop.log
       # On CircleCI you cannot create a cache on Linux and restore it on macOS.
       # Hence we need a separate cache for macOS that we create and restore. It
       # is not a separate job (like `ensure_groth_parameters_and_keys_linux`,
