--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,7 +289,7 @@ jobs:
       - run:
           name: Log network traffic
           background: true
-          command: nettop -m tcp -t wired -s 1 -d -l 0 -J bytes_in -p circleci-agent > nettop.log
+          command: nettop -m tcp -t wired -s 1 -d -l 0 -J bytes_in -p circleci-agent
       # On CircleCI you cannot create a cache on Linux and restore it on macOS.
       # Hence we need a separate cache for macOS that we create and restore. It
       # is not a separate job (like `ensure_groth_parameters_and_keys_linux`,
@@ -297,7 +297,6 @@ jobs:
       - restore_parameter_cache
       - ensure_filecoin_parameters
       - save_parameter_cache
-      - run: cat nettop.log
       #- run:
       #    name: Test Darwin
       #    command: |
