--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,9 @@ jobs:
           command: aws configure set default.s3.max_concurrent_requests 40
       - checkout
       - run:
-          name: Log network traffic of agent
+          name: Log network traffic of agent and AWS CLI
           background: true
-          command: nettop -m tcp -t wired -s 1 -d -l 0 -J bytes_in -p circleci-agent
+          command: nettop -m tcp -t wired -s 1 -d -l 0 -J bytes_in -p circleci-agent -p Python
       - restore_parameter_cache
       - run:
           name: Download a file from S3 east to verify that about 100Mib/s is possible
